testing/sqltests/tests/snapshot_tests/tpch/snapshots/tpch__q19-discounted-revenue.snap
---
source: tpch.sqltest
expression: |-
  select
          sum(l_extendedprice* (1 - l_discount)) as revenue
      from
          lineitem,
          part
      where
          (
              p_partkey = l_partkey
              and p_brand = 'Brand#22'
              and p_container in ('SM CASE', 'SM BOX', 'SM PACK', 'SM PKG')
              and l_quantity >= 8 and l_quantity <= 8 + 10
              and p_size between 1 and 5
              and l_shipmode in ('AIR', 'AIR REG')
              and l_shipinstruct = 'DELIVER IN PERSON'
          )
          or
          (
              p_partkey = l_partkey
              and p_brand = 'Brand#23'
              and p_container in ('MED BAG', 'MED BOX', 'MED PKG', 'MED PACK')
              and l_quantity >= 10 and l_quantity <= 10 + 10
              and p_size between 1 and 10
              and l_shipmode in ('AIR', 'AIR REG')
              and l_shipinstruct = 'DELIVER IN PERSON'
          )
          or
          (
              p_partkey = l_partkey
              and p_brand = 'Brand#12'
              and p_container in ('LG CASE', 'LG BOX', 'LG PACK', 'LG PKG')
              and l_quantity >= 24 and l_quantity <= 24 + 10
              and p_size between 1 and 15
              and l_shipmode in ('AIR', 'AIR REG')
              and l_shipinstruct = 'DELIVER IN PERSON'
          );
info:
  statement_type: SELECT
  tables:
  - lineitem
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN lineitem
`--SEARCH part USING INTEGER PRIMARY KEY (rowid=?)

BYTECODE
addr  opcode        p1  p2  p3  p4                                     p5  comment
   0  Init           0  88   0                                          0  Start at 88
   1  Null           0   2   0                                          0  r[2]=NULL
   2  OpenRead       0  10   0  k(17,B,B,B,B,B,B,B,B,B,B,B,B,B,B,B,B)   0  table=lineitem, root=10, iDb=0
   3  OpenRead       1   4   0  k(9,B,B,B,B,B,B,B,B,B)                  0  table=part, root=4, iDb=0
   4  Rewind         0  84   0                                          0  Rewind table lineitem
   5    Column       0  14   3                                          0  r[3]=lineitem.L_SHIPMODE
   6    Eq           3   4   8  Binary                                  0  if r[3]==r[4] goto 8
   7    Ne           3   5  83  Binary                                  0  if r[3]!=r[5] goto 83
   8    Column       0  13   7                                          0  r[7]=lineitem.L_SHIPINSTRUCT
   9    Ne           7   8  83  Binary                                  0  if r[7]!=r[8] goto 83
  10    Column       0   1   9                                          0  r[9]=lineitem.L_PARTKEY
  11    SeekRowid    1   9  83                                          0  if (r[9]!=cursor 1 for table part.rowid) goto 83
  12    Column       1   3  11                                          0  r[11]=part.P_BRAND
  13    Ne          11  12  34  Binary                                  0  if r[11]!=r[12] goto 34
  14    Column       1   6  13                                          0  r[13]=part.P_CONTAINER
  15    Eq          13  14  19  Binary                                  0  if r[13]==r[14] goto 19
  16    Eq          13  15  19  Binary                                  0  if r[13]==r[15] goto 19
  17    Eq          13  16  19  Binary                                  0  if r[13]==r[16] goto 19
  18    Ne          13  17  34  Binary                                  0  if r[13]!=r[17] goto 34
  19    Column       0   4  19                                          0  r[19]=lineitem.L_QUANTITY
  20    Lt          19  20  34  Binary                                  0  if r[19]<r[20] goto 34
  21    Column       0   4  22                                          0  r[22]=lineitem.L_QUANTITY
  22    Gt          22  23  34  Binary                                  0  if r[22]>r[23] goto 34
  23    Column       1   5  27                                          0  r[27]=part.P_SIZE
  24    Copy        27  29   0                                          0  r[29]=r[27]
  25    Integer      1  28   0                                          0  r[28]=1
  26    Ge          29  30  28  Binary                                  0  if r[29]>=r[30] goto 28
  27    ZeroOrNull  29  28  30                                          0  ((r[29]=NULL)|(r[30]=NULL)) ? r[28]=NULL : r[28]=0
  28    Copy        27  32   0                                          0  r[32]=r[27]
  29    Integer      1  31   0                                          0  r[31]=1
  30    Le          32  33  32  Binary                                  0  if r[32]<=r[33] goto 32
  31    ZeroOrNull  32  31  33                                          0  ((r[32]=NULL)|(r[33]=NULL)) ? r[31]=NULL : r[31]=0
  32    And         31  28  26                                          0  r[26]=(r[28] && r[31])
  33    If          26  78   0                                          0  if r[26] goto 78
  34    Column       1   3  35                                          0  r[35]=part.P_BRAND
  35    Ne          35  36  56  Binary                                  0  if r[35]!=r[36] goto 56
  36    Column       1   6  37                                          0  r[37]=part.P_CONTAINER
  37    Eq          37  38  41  Binary                                  0  if r[37]==r[38] goto 41
  38    Eq          37  39  41  Binary                                  0  if r[37]==r[39] goto 41
  39    Eq          37  40  41  Binary                                  0  if r[37]==r[40] goto 41
  40    Ne          37  41  56  Binary                                  0  if r[37]!=r[41] goto 56
  41    Column       0   4  43                                          0  r[43]=lineitem.L_QUANTITY
  42    Lt          43  44  56  Binary                                  0  if r[43]<r[44] goto 56
  43    Column       0   4  46                                          0  r[46]=lineitem.L_QUANTITY
  44    Gt          46  47  56  Binary                                  0  if r[46]>r[47] goto 56
  45    Column       1   5  50                                          0  r[50]=part.P_SIZE
  46    Copy        50  52   0                                          0  r[52]=r[50]
  47    Integer      1  51   0                                          0  r[51]=1
  48    Ge          52  53  50  Binary                                  0  if r[52]>=r[53] goto 50
  49    ZeroOrNull  52  51  53                                          0  ((r[52]=NULL)|(r[53]=NULL)) ? r[51]=NULL : r[51]=0
  50    Copy        50  55   0                                          0  r[55]=r[50]
  51    Integer      1  54   0                                          0  r[54]=1
  52    Le          55  56  54  Binary                                  0  if r[55]<=r[56] goto 54
  53    ZeroOrNull  55  54  56                                          0  ((r[55]=NULL)|(r[56]=NULL)) ? r[54]=NULL : r[54]=0
  54    And         54  51  49                                          0  r[49]=(r[51] && r[54])
  55    If          49  78   0                                          0  if r[49] goto 78
  56    Column       1   3  58                                          0  r[58]=part.P_BRAND
  57    Ne          58  59  83  Binary                                  0  if r[58]!=r[59] goto 83
  58    Column       1   6  60                                          0  r[60]=part.P_CONTAINER
  59    Eq          60  61  63  Binary                                  0  if r[60]==r[61] goto 63
  60    Eq          60  62  63  Binary                                  0  if r[60]==r[62] goto 63
  61    Eq          60  63  63  Binary                                  0  if r[60]==r[63] goto 63
  62    Ne          60  64  83  Binary                                  0  if r[60]!=r[64] goto 83
  63    Column       0   4  66                                          0  r[66]=lineitem.L_QUANTITY
  64    Lt          66  67  83  Binary                                  0  if r[66]<r[67] goto 83
  65    Column       0   4  69                                          0  r[69]=lineitem.L_QUANTITY
  66    Gt          69  70  83  Binary                                  0  if r[69]>r[70] goto 83
  67    Column       1   5  74                                          0  r[74]=part.P_SIZE
  68    Copy        74  76   0                                          0  r[76]=r[74]
  69    Integer      1  75   0                                          0  r[75]=1
  70    Ge          76  77  72  Binary                                  0  if r[76]>=r[77] goto 72
  71    ZeroOrNull  76  75  77                                          0  ((r[76]=NULL)|(r[77]=NULL)) ? r[75]=NULL : r[75]=0
  72    Copy        74  79   0                                          0  r[79]=r[74]
  73    Integer      1  78   0                                          0  r[78]=1
  74    Le          79  80  76  Binary                                  0  if r[79]<=r[80] goto 76
  75    ZeroOrNull  79  78  80                                          0  ((r[79]=NULL)|(r[80]=NULL)) ? r[78]=NULL : r[78]=0
  76    And         78  75  73                                          0  r[73]=(r[75] && r[78])
  77    IfNot       73  83   1                                          0  if !r[73] goto 83
  78    Column       0   5  82                                          0  r[82]=lineitem.L_EXTENDEDPRICE
  79    Column       0   6  85                                          0  r[85]=lineitem.L_DISCOUNT
  80    Subtract    84  85  83                                          0  r[83]=r[84]-r[85]
  81    Multiply    82  83  81                                          0  r[81]=r[82]*r[83]
  82    AggStep      0  81   2  sum                                     0  accum=r[2] step(r[81])
  83  Next           0   5   0                                          0
  84  AggFinal       0   2   0  sum                                     0  accum=r[2]
  85  Copy           2   1   0                                          0  r[1]=r[2]
  86  ResultRow      1   1   0                                          0  output=r[1]
  87  Halt           0   0   0                                          0
  88  Transaction    0   1   8                                          0  iDb=0 tx_mode=Read
  89  String8        0   4   0  AIR                                     0  r[4]='AIR'
  90  String8        0   5   0  AIR REG                                 0  r[5]='AIR REG'
  91  String8        0   8   0  DELIVER IN PERSON                       0  r[8]='DELIVER IN PERSON'
  92  String8        0  12   0  Brand#22                                0  r[12]='Brand#22'
  93  String8        0  14   0  SM CASE                                 0  r[14]='SM CASE'
  94  String8        0  15   0  SM BOX                                  0  r[15]='SM BOX'
  95  String8        0  16   0  SM PACK                                 0  r[16]='SM PACK'
  96  String8        0  17   0  SM PKG                                  0  r[17]='SM PKG'
  97  Integer        8  20   0                                          0  r[20]=8
  98  Integer        8  24   0                                          0  r[24]=8
  99  Integer       10  25   0                                          0  r[25]=10
 100  Add           24  25  23                                          0  r[23]=r[24]+r[25]
 101  Integer        1  30   0                                          0  r[30]=1
 102  Integer        5  33   0                                          0  r[33]=5
 103  String8        0  36   0  Brand#23                                0  r[36]='Brand#23'
 104  String8        0  38   0  MED BAG                                 0  r[38]='MED BAG'
 105  String8        0  39   0  MED BOX                                 0  r[39]='MED BOX'
 106  String8        0  40   0  MED PKG                                 0  r[40]='MED PKG'
 107  String8        0  41   0  MED PACK                                0  r[41]='MED PACK'
 108  Integer       10  44   0                                          0  r[44]=10
 109  Integer       10  48   0                                          0  r[48]=10
 110  Add           48  48  47                                          0  r[47]=r[48]+r[48]
 111  Integer        1  53   0                                          0  r[53]=1
 112  Integer       10  56   0                                          0  r[56]=10
 113  String8        0  59   0  Brand#12                                0  r[59]='Brand#12'
 114  String8        0  61   0  LG CASE                                 0  r[61]='LG CASE'
 115  String8        0  62   0  LG BOX                                  0  r[62]='LG BOX'
 116  String8        0  63   0  LG PACK                                 0  r[63]='LG PACK'
 117  String8        0  64   0  LG PKG                                  0  r[64]='LG PKG'
 118  Integer       24  67   0                                          0  r[67]=24
 119  Integer       24  71   0                                          0  r[71]=24
 120  Integer       10  72   0                                          0  r[72]=10
 121  Add           71  72  70                                          0  r[70]=r[71]+r[72]
 122  Integer        1  77   0                                          0  r[77]=1
 123  Integer       15  80   0                                          0  r[80]=15
 124  Integer        1  84   0                                          0  r[84]=1
 125  Goto           0   1   0                                          0
