testing/sqltests/tests/snapshot_tests/tpch/snapshots/tpch__q6-forecasting-revenue.snap
---
source: tpch.sqltest
expression: |-
  select
          sum(l_extendedprice * l_discount) as revenue
      from
          lineitem
      where
          l_shipdate >= '1994-01-01'
          and l_shipdate < '1995-01-01'
          and l_discount between 0.08 - 0.01 and 0.08 + 0.01
          and l_quantity < 24;
info:
  statement_type: SELECT
  tables:
  - lineitem
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN lineitem

BYTECODE
addr  opcode        p1  p2  p3  p4                                     p5  comment
   0  Init           0  30   0                                          0  Start at 30
   1  Null           0   2   0                                          0  r[2]=NULL
   2  OpenRead       0  10   0  k(17,B,B,B,B,B,B,B,B,B,B,B,B,B,B,B,B)   0  table=lineitem, root=10, iDb=0
   3  Rewind         0  26   0                                          0  Rewind table lineitem
   4    Column       0  10   4                                          0  r[4]=lineitem.L_SHIPDATE
   5    Lt           4   5  25  Binary                                  0  if r[4]<r[5] goto 25
   6    Column       0  10   7                                          0  r[7]=lineitem.L_SHIPDATE
   7    Ge           7   8  25  Binary                                  0  if r[7]>=r[8] goto 25
   8    Column       0   6  10                                          0  r[10]=lineitem.L_DISCOUNT
   9    Copy        10  12   0                                          0  r[12]=r[10]
  10    Integer      1  11   0                                          0  r[11]=1
  11    Ge          12  13  13  Binary                                  0  if r[12]>=r[13] goto 13
  12    ZeroOrNull  12  11  13                                          0  ((r[12]=NULL)|(r[13]=NULL)) ? r[11]=NULL : r[11]=0
  13    Copy        10  17   0                                          0  r[17]=r[10]
  14    Integer      1  16   0                                          0  r[16]=1
  15    Le          17  18  17  Binary                                  0  if r[17]<=r[18] goto 17
  16    ZeroOrNull  17  16  18                                          0  ((r[17]=NULL)|(r[18]=NULL)) ? r[16]=NULL : r[16]=0
  17    And         16  11   9                                          0  r[9]=(r[11] && r[16])
  18    IfNot        9  25   1                                          0  if !r[9] goto 25
  19    Column       0   4  22                                          0  r[22]=lineitem.L_QUANTITY
  20    Ge          22  23  25  Binary                                  0  if r[22]>=r[23] goto 25
  21    Column       0   5  25                                          0  r[25]=lineitem.L_EXTENDEDPRICE
  22    Column       0   6  26                                          0  r[26]=lineitem.L_DISCOUNT
  23    Multiply    25  26  24                                          0  r[24]=r[25]*r[26]
  24    AggStep      0  24   2  sum                                     0  accum=r[2] step(r[24])
  25  Next           0   4   0                                          0
  26  AggFinal       0   2   0  sum                                     0  accum=r[2]
  27  Copy           2   1   0                                          0  r[1]=r[2]
  28  ResultRow      1   1   0                                          0  output=r[1]
  29  Halt           0   0   0                                          0
  30  Transaction    0   1   8                                          0  iDb=0 tx_mode=Read
  31  String8        0   5   0  1994-01-01                              0  r[5]='1994-01-01'
  32  String8        0   8   0  1995-01-01                              0  r[8]='1995-01-01'
  33  Real           0  14   0  0.08                                    0  r[14]=0.08
  34  Real           0  15   0  0.01                                    0  r[15]=0.01
  35  Subtract      14  15  13                                          0  r[13]=r[14]-r[15]
  36  Real           0  19   0  0.08                                    0  r[19]=0.08
  37  Real           0  20   0  0.01                                    0  r[20]=0.01
  38  Add           19  20  18                                          0  r[18]=r[19]+r[20]
  39  Integer       24  23   0                                          0  r[23]=24
  40  Goto           0   1   0                                          0
