testing/sqltests/tests/snapshot_tests/tpch/snapshots/tpch__q9-product-type-profit.snap
---
source: tpch.sqltest
expression: |-
  select
          nation,
          o_year,
          sum(amount) as sum_profit
      from
          (
              select
                  n_name as nation,
                  substr(o_orderdate, 1, 4) as o_year,
                  l_extendedprice * (1 - l_discount) - ps_supplycost * l_quantity as amount
              from
                  part,
                  supplier,
                  lineitem,
                  partsupp,
                  orders,
                  nation
              where
                  s_suppkey = l_suppkey
                  and ps_suppkey = l_suppkey
                  and ps_partkey = l_partkey
                  and p_partkey = l_partkey
                  and o_orderkey = l_orderkey
                  and s_nationkey = n_nationkey
                  and p_name like '%yellow%'
          ) as profit
      group by
          nation,
          o_year
      order by
          nation,
          o_year desc;
info:
  statement_type: SELECT
  tables:
  - part
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN profit
|  |--SCAN lineitem
|  |--SEARCH part USING INTEGER PRIMARY KEY (rowid=?)
|  |--SEARCH partsupp USING INDEX sqlite_autoindex_partsupp_1 (ps_partkey=? AND ps_suppkey=?)
|  |--SEARCH supplier USING INTEGER PRIMARY KEY (rowid=?)
|  |--SEARCH orders USING INTEGER PRIMARY KEY (rowid=?)
|  `--SEARCH nation USING INTEGER PRIMARY KEY (rowid=?)
`--USE SORTER FOR GROUP BY
